--- a/charts/msg-pulsar-tp/values.yaml
+++ b/charts/msg-pulsar-tp/values.yaml
@@ -16,7 +16,6 @@ apd:
   # Platform Pulsar Group settings
   name:
   image:
-  # ports:
   #   httpPort: 9010
   #   tcpPort: 9011
   #   sslPort: 9012
@@ -42,6 +41,8 @@ apd:
   ports:
     tcpPort: 9011
     sslPort: 9012
+    watchdogPort: 12502
+    loggerPort: 12506
   # Allow Platform Component overrides
   zoo:
     serviceAccount:
