--- a/charts/msg-pulsar-tp/conf/log4j2.yaml
+++ b/charts/msg-pulsar-tp/conf/log4j2.yaml
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+#
 Configuration:
   status: INFO
   monitorInterval: 30
