--- a/charts/tp-cp-msg-contrib/values.yaml
+++ b/charts/tp-cp-msg-contrib/values.yaml
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+#
 # STANDARD CONTROL-PLANE SETTINGs
 global:
   cic:
@@ -20,7 +25,8 @@ data:
 # MSGDP OVERRIDE SETTINGS
 cp:
   registry:
-  repo:
+  repository:
+  useNewRepos: false
   CP_VOLUME_CLAIM:
   pullSecret:
   imageName:
@@ -51,6 +57,6 @@ jobPostSleep:
 #   repo: msg-platform-cicd
 #   CP_VOLUME_CLAIM: provider-cp-fs-store
 #   imageName: msg-cp-ui-contrib
-#   imageTag: "1.2.0-30"
+#   imageTag: "1.3.0-14"
 #   TARGET_PATH: /private/tsc/config/capabilities/platform
 #   imageFullName:
