platform-bootstrap chart upgrade

--- a/charts/platform-bootstrap/values.yaml
+++ b/charts/platform-bootstrap/values.yaml
@@ -31,12 +31,16 @@ global:
     # control plane instance Id. Ex: prod, stag, p01, s01. This is to identify multiple cp installation in same cluster.
     # lowercase alphanumeric string of max 5 chars
     controlPlaneInstanceId: ""
+
+    useSingleNamespace: true
+
   external:
     dnsTunnelDomain: ""
     dnsDomain: ""
     clusterInfo:
       nodeCIDR: ""
       podCIDR: ""
+      serviceCIDR: ""
 
 #    logserver:
 #      endpoint: ""
