--- a/charts/tibco-developer-hub/templates/well-known-configuration-svc.yaml
+++ b/charts/tibco-developer-hub/templates/well-known-configuration-svc.yaml
@@ -17,3 +17,7 @@ metadata:
 spec:
   externalName: {{ $cpHostname }}
   type: ExternalName
+  ports:
+    - port: 443
+      protocol: TCP
+      targetPort: 443
