--- a/charts/tp-cp-tibcohub-contrib/values.yaml
+++ b/charts/tp-cp-tibcohub-contrib/values.yaml
@@ -6,16 +6,16 @@ source:
 
 tibcoHub:
   image:
-    name: "tibco-hub-cp-contrib"
-    tag: 118
+    name: "dx-tibco-hub-cp-contrib"
+    tag: 133
     pullPolicy: IfNotPresent
 
 containerImageExtractor:
   image:
-    name: "container-image-extractor"
+    name: "infra-container-image-extractor"
     registry: ""
     repo: ""
-    tag: 93-distroless
+    tag: 98-distroless
     pullPolicy: IfNotPresent
 
 image:
