--- a/charts/flogoprovisioner/templates/deployment.yaml
+++ b/charts/flogoprovisioner/templates/deployment.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2023. Cloud Software Group, Inc.
+# Copyright © 2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -53,7 +53,7 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           {{- end }}
-          image: {{ include "flogoprovisioner.image.registry" .}}{{"/"}}{{ include "flogoprovisioner.image.repository" .}}{{"/"}}flogo-provisioner:{{ .Values.global.flogoprovisioner.image.tag }}
+          image: {{ include "flogoprovisioner.image.registry" .}}{{"/"}}{{ include "flogoprovisioner.image.repository" .}}{{"/"}}tp-flogo-provisioner:{{ .Values.global.flogoprovisioner.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           livenessProbe:
             httpGet:
@@ -74,6 +74,20 @@ spec:
                 configMapKeyRef:
                   name: {{ $fullName }}-serviceconfig
                   key: {{ $filename }}
+            {{- end }}
+            {{- end }}
+            {{- with .Values.global.cp.proxy }}
+            {{- if .httpProxy }}
+            - name: http_proxy
+              value: {{ .httpProxy }}
+            {{- end }}
+            {{- if .httpsProxy }}
+            - name: https_proxy
+              value: {{ .httpsProxy }}
+            {{- end }}
+            {{- if .noProxy }}
+            - name: no_proxy
+              value: {{ .noProxy | quote }}
             {{- end }}
             {{- end }}
             - name: DATAPLANE_ID
@@ -109,7 +123,7 @@ spec:
             - name: LOGGING_FLUENT_BIT_ENABLED
               value: "{{ .Values.global.cp.logging.fluentbit.apps.enabled }}"
             - name: FLUENT_BIT_SIDECAR_IMAGE
-              value: {{ include "flogoprovisioner.image.registry" .}}{{"/"}}{{ include "flogoprovisioner.appinit.image.repository" .}}{{"/"}}fluent-bit:{{ .Values.global.cp.logging.fluentbit.image.tag }}
+              value: {{ include "flogoprovisioner.image.registry" .}}{{"/"}}{{ include "flogoprovisioner.appinit.image.repository" .}}{{"/"}}common-fluentbit:{{ .Values.global.cp.logging.fluentbit.image.tag }}
             - name: OTEL_METRICS_SERVICE_NAME
               valueFrom:
                 configMapKeyRef:
@@ -136,7 +150,7 @@ spec:
                   optional: true
         {{- if .Values.global.cp.logging.fluentbit.enabled }}
         - name: fluent-bit
-          image: {{ include "flogoprovisioner.image.registry" .}}{{"/"}}{{ include "flogoprovisioner.appinit.image.repository" .}}{{"/"}}fluent-bit:{{ .Values.global.cp.logging.fluentbit.image.tag }}
+          image: {{ include "flogoprovisioner.image.registry" .}}{{"/"}}{{ include "flogoprovisioner.appinit.image.repository" .}}{{"/"}}common-fluentbit:{{ .Values.global.cp.logging.fluentbit.image.tag }}
           imagePullPolicy: {{ .Values.global.imagePullPolicy }}
           {{- if .Values.global.cp.logging.fluentbit.securityContext }}
           securityContext:
