--- a/charts/tp-cp-integration-flogo/charts/flogo-webserver/values.yaml
+++ b/charts/tp-cp-integration-flogo/charts/flogo-webserver/values.yaml
@@ -22,8 +22,8 @@ global:
   # GitHub issue: https://github.com/fluent/fluent-bit/issues/872#issuecomment-827763207, https://github.com/kyma-project/kyma/pull/11657/files
   fluentbit:
     image:
-      name: "fluent-bit"
-      tag: "3.0.2"
+      name: "common-fluentbit"
+      tag: "3.1.4"
     securityContext:
       runAsNonRoot: false
       runAsUser: 0
@@ -35,7 +35,7 @@ global:
 image:
   registry: ""
   repo: ""
-  tag: "184-platform-1.2.0"
+  tag: "221-platform-1.3.0"
 
 flogowebserver:
   resources:
